added 2019 children and vulnerable adults conditions

--- a/server/views/licenceConditions/includes/formBuilder.pug
+++ b/server/views/licenceConditions/includes/formBuilder.pug
@@ -71,3 +71,15 @@ div.form-group
 
   if formItem === 'tell_probation_about_relationship'
     include tell_probation_about_relationship
+
+  if formItem === 'do_not_live_or_stay'
+    include do_not_live_or_stay
+
+  if formItem === 'do_not_have_unsupervised_contact'
+    include do_not_have_unsupervised_contact
+
+  if formItem === 'do_not_in_sight_of'
+    include do_not_in_sight_of
+
+  if formItem === 'do_not_work_or_activity'
+    include do_not_work_or_activity
